--- a/app/src/main/res/layout/activity_bootstrap.xml
+++ b/app/src/main/res/layout/activity_bootstrap.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.securespaces.android.bootstrap.BootstrapActivity">
 
     <android.support.v4.view.ViewPager
@@ -14,4 +13,57 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-</android.support.design.widget.CoordinatorLayout>
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom">
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/circle_empty"
+                android:id="@+id/pageIndicator2"
+                android:layout_alignParentTop="true"
+                android:paddingStart="@dimen/page_indicator_padding"
+                android:paddingEnd="@dimen/page_indicator_padding"
+                android:layout_centerHorizontal="true" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/circle_empty"
+                android:id="@+id/pageIndicator3"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/pageIndicator2" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/circle_full"
+                android:id="@+id/pageIndicator1"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/pageIndicator2" />
+        </RelativeLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/next"
+            android:id="@+id/proceedButton"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/buttonColor"
+            android:layout_gravity="center_horizontal|bottom" />
+    </LinearLayout>
+
+</FrameLayout>
