--- a/app/src/main/res/drawable/circle_empty.xml
+++ b/app/src/main/res/drawable/circle_empty.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
-        android:width="4dp"
+        android:width="@dimen/page_indicator_stroke"
         android:color="@color/textWhite"/>
     <size
         android:height="@dimen/page_indicator_size"
