--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:statusBarColor">@android:color/transparent</item>
+
         <item name="android:textColor">@color/textWhite</item>
     </style>
     <style name="AppTheme.NoActionBar">
