--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -17,16 +17,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/space_name"
-            android:textSize="@dimen/intro_fragment_large_text"
+            android:text="@string/space_features_title"
+            android:textSize="28sp"
             android:id="@+id/spaceNameView"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="@dimen/text_top_padding"
             android:layout_marginStart="@dimen/fragment_text_start_padding"
             />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/fragment_text_start_padding"
+            android:id="@+id/featureListText"
+            android:text="@string/space_features_list"/>
 
     </LinearLayout>
 </FrameLayout>
