better feature list, cleanup

--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -15,7 +15,8 @@
         android:fitsSystemWindows="true"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/fragment_text_start_padding">
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,17 +25,17 @@
             android:textSize="28sp"
             android:id="@+id/spaceNameView"
             android:layout_marginTop="@dimen/text_top_padding"
-            android:layout_marginStart="@dimen/fragment_text_start_padding"
             />
 
-        <TextView
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="@dimen/fragment_text_start_padding"
-            android:id="@+id/featureListText"
-            android:text="@string/space_features_list"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingTop="15dp"
+            android:id="@+id/listView"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
 </FrameLayout>
