--- a/app/src/main/res/layout/activity_bootstrap.xml
+++ b/app/src/main/res/layout/activity_bootstrap.xml
@@ -1,66 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.securespaces.android.bootstrap.BootstrapActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="194px"
+        app:titleTextColor="@android:color/white"
+        android:background="@color/xiaomi_toolbar_background">
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/space_name"
+            android:textColor="@color/xiaomi_toolbar_text_color"
+            android:background="@android:color/transparent"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:paddingTop="20dp"
+            android:layout_gravity="center"/>
+    </android.support.v7.widget.Toolbar>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:fitsSystemWindows="false"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <LinearLayout
-        android:orientation="vertical"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom">
+        android:text="@string/next"
+        android:id="@+id/proceedButton"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        style="@style/Xiaomi.Button" />
 
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/circle_empty"
-                android:id="@+id/pageIndicator2"
-                android:layout_alignParentTop="true"
-                android:paddingStart="@dimen/page_indicator_padding"
-                android:paddingEnd="@dimen/page_indicator_padding"
-                android:layout_centerHorizontal="true" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/circle_empty"
-                android:id="@+id/pageIndicator3"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/pageIndicator2" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/circle_full"
-                android:id="@+id/pageIndicator1"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/pageIndicator2" />
-        </RelativeLayout>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/next"
-            android:id="@+id/proceedButton"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/launch_button_background"
-            android:layout_gravity="center_horizontal|bottom" />
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
