--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/toolbar_back" />
 
-    <LinearLayout
-        android:fitsSystemWindows="true"
-        android:orientation="vertical"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/space_features_title"
+        android:textSize="23sp"
+        android:id="@+id/spaceNameView"
+        android:paddingStart="@dimen/fragment_text_start_padding"
+        android:layout_marginTop="@dimen/text_top_padding"
+        />
+
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/fragment_text_start_padding">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingTop="15dp"
+        android:id="@+id/listView"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingStart="@dimen/fragment_text_start_padding"
+        android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/space_features_title"
-            android:textSize="23sp"
-            android:id="@+id/spaceNameView"
-            android:layout_marginTop="@dimen/text_top_padding"
-            />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:paddingTop="15dp"
-            android:id="@+id/listView"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            android:layout_gravity="center_horizontal" />
-
-    </LinearLayout>
-</FrameLayout>
+</LinearLayout>
