--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -3,13 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/toolbar" />
+
     <ImageView
         android:layout_width="200dp"
         android:layout_height="400dp"
         android:src="@drawable/ic_device"
         android:id="@+id/imageView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/textView4" />
 
     <TextView
         android:layout_width="wrap_content"
