--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -6,28 +6,13 @@
     <include layout="@layout/toolbar_back"
         android:id="@+id/include" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/subContainer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:paddingTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_above="@+id/topTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="72dp">
-    </ProgressBar>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/space_content_downloading"
-        android:textSize="20sp"
-        android:id="@+id/topTextView"
-        android:gravity="center_horizontal"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/include"
+        android:layout_above="@+id/proceedButton" />
 
     <Button
         android:layout_width="match_parent"
