--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -7,8 +7,8 @@
         android:id="@+id/include2" />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="400dp"
+        android:layout_width="163dp"
+        android:layout_height="300dp"
         android:src="@drawable/ic_device"
         android:id="@+id/imageView3"
         android:layout_below="@+id/include2"
@@ -34,14 +34,11 @@
         android:layout_centerHorizontal="true" />
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/next"
         android:id="@+id/proceedButton"
         style="@style/Xiaomi.Button"
+        android:layerType="none"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
