--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -9,9 +9,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/space_features_title"
-        android:textSize="23sp"
+        android:textSize="20sp"
         android:id="@+id/spaceNameView"
         android:paddingStart="@dimen/fragment_text_start_padding"
+        android:paddingEnd="@dimen/fragment_text_end_padding"
         android:layout_marginTop="@dimen/text_top_padding"
         />
 
@@ -24,17 +25,12 @@
         android:divider="@null"
         android:dividerHeight="0dp"
         android:paddingStart="@dimen/fragment_text_start_padding"
+        android:paddingEnd="@dimen/fragment_text_end_padding"
         android:layout_gravity="center_horizontal" />
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/next"
         android:id="@+id/proceedButton"
         style="@style/Xiaomi.Button"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="10dp"/>
 </LinearLayout>
