--- a/app/src/main/res/layout/item_feature_point.xml
+++ b/app/src/main/res/layout/item_feature_point.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="10dp">
 
     <TextView
@@ -11,13 +11,12 @@
         android:textSize="@dimen/intro_fragment_small_text"
         android:id="@+id/textView" />
 
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="fill"
         android:paddingStart="5dp"
         android:text="@string/app_name"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:id="@+id/textView2" />
 </LinearLayout>
