--- a/app/src/main/res/layout/subfragment2.xml
+++ b/app/src/main/res/layout/subfragment2.xml
@@ -8,11 +8,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/ic_switch"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:layout_below="@+id/include"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="102dp" />
+        android:layout_marginTop="36dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,6 +21,5 @@
         android:paddingEnd="20dp"
         android:gravity="center"
         android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp" />
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
