--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -7,12 +7,13 @@
         android:id="@+id/include2" />
 
     <ImageView
-        android:layout_width="163dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_device"
         android:id="@+id/imageView3"
+        android:layout_marginTop="36dp"
         android:layout_below="@+id/include2"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
