removed product flavours, many other changes

--- a/app/src/main/res/layout/fragment_recommended_apps.xml
+++ b/app/src/main/res/layout/fragment_recommended_apps.xml
@@ -10,6 +10,7 @@
         android:layout_weight="1">
         <WebView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/web_view"
+            android:background="@color/xiaomi_background_color"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
@@ -21,6 +22,7 @@
         android:id="@+id/proceedButton"
         style="@style/Xiaomi.Button"
         android:layout_marginTop="10dp"
+        android:enabled="false"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </LinearLayout>
