--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -12,28 +12,34 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_device"
         android:id="@+id/imageView3"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="26dp"
         android:layout_below="@+id/include2"
         android:layout_alignParentStart="true" />
-
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/space_name"
-        android:textColor="@color/xiaomi_text_color"
-        android:textSize="@dimen/intro_fragment_extra_large_text"
-        android:id="@+id/textView3"
+        android:text="@string/space_features_title"
+        android:textSize="20sp"
+        android:id="@+id/spaceNameView"
+        android:paddingStart="@dimen/fragment_text_start_padding"
+        android:paddingEnd="@dimen/fragment_text_end_padding"
         android:layout_below="@+id/imageView3"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/space_subtitle"
-        android:textSize="19sp"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/listView"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingStart="@dimen/fragment_text_start_padding"
+        android:paddingEnd="@dimen/fragment_text_end_padding"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/spaceNameView"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/proceedButton" />
     <Button
         android:layout_width="match_parent"
         android:text="@string/next"
