everything but the recommended apps

--- a/app/src/main/res/layout/fragment_emm_selection.xml
+++ b/app/src/main/res/layout/fragment_emm_selection.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/ic_device"
+        android:src="@drawable/ic_emm_phone"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
