--- a/app/src/main/res/layout/fragment_emm_selection.xml
+++ b/app/src/main/res/layout/fragment_emm_selection.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar_back"
+    <include layout="@layout/toolbar"
         android:id="@+id/include3" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/emm_instructions"
-        android:paddingTop="@dimen/fragment_text_end_padding"
         android:paddingStart="@dimen/fragment_text_start_padding"
         android:paddingEnd="@dimen/fragment_text_end_padding"
         android:layout_below="@+id/include3"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:padding="@dimen/fragment_text_end_padding" />
 
     <Button
         android:layout_width="match_parent"
@@ -47,10 +47,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/ic_emm_phone"
+        android:src="@drawable/emm"
         android:layout_marginBottom="35dp"
         android:layout_above="@+id/skipButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_weight="1"
+        android:layout_gravity="center" />
     <Button
         android:layout_width="match_parent"
         android:text="@string/skip"
@@ -60,5 +62,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+</LinearLayout>
 
