DEV-44 Until completed, a persistent notification prompts users to return to the bootstrap

--- a/app/src/main/res/layout/fragment_recommended_apps.xml
+++ b/app/src/main/res/layout/fragment_recommended_apps.xml
@@ -21,7 +21,5 @@
         android:id="@+id/proceedButton"
         style="@style/Xiaomi.Button.Blue"
         android:layout_marginTop="10dp"
-        android:enabled="false"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:enabled="false"/>
 </LinearLayout>
