--- a/app/src/main/res/layout/activity_bootstrap.xml
+++ b/app/src/main/res/layout/activity_bootstrap.xml
@@ -12,4 +12,10 @@
         android:layout_height="match_parent"
         />
 
+    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/webview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        />
+
 </LinearLayout>
