--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">@color/fashion_grey</color>
     <color name="colorAccent">#FF4081</color>
 
 
     <color name="xiaomi_button_background_blue">#0098e6</color>
     <color name="xiaomi_button_background_selected_blue">#0080c1</color>
+
+    <color name="fashion_yellow">#b5973b</color>
+    <color name="fashion_grey">#4d4d4d</color>
 </resources>
