--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/xiaomi_toolbar_background</item>
+        <item name="colorPrimaryDark">@color/fashion_grey</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
