some size fixes

--- a/app/src/main/res/layout/fragment_recommended_apps.xml
+++ b/app/src/main/res/layout/fragment_recommended_apps.xml
@@ -16,7 +16,7 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:text="@string/launch"
         android:id="@+id/proceedButton"
         android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
