--- a/app/src/main/res/layout/fragment_fashion.xml
+++ b/app/src/main/res/layout/fragment_fashion.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/imageView2"
-        android:layout_weight="1"
         android:src="@drawable/fashion_boot"
         android:scaleType="fitXY"
         android:layout_gravity="center" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:text="@string/start"
         android:textColor="@android:color/white"
         android:background="@color/fashion_yellow"
         android:id="@+id/button"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+</RelativeLayout>
