--- a/app/src/main/res/layout/fragment_fashion.xml
+++ b/app/src/main/res/layout/fragment_fashion.xml
@@ -1,15 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_above="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/imageView2"
-        android:src="@drawable/fashion_boot"
-        android:scaleType="fitXY"
-        android:layout_gravity="center" />
+        android:background="@drawable/fashion_bg">
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:paddingLeft="20dp">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/icon_fashion"
+                android:layout_weight="1" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:paddingTop="50dp"
+                android:paddingBottom="35dp"
+                android:paddingLeft="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:text="@string/welcome"
+                    android:textColor="@android:color/white"
+                    android:ems="10"
+                    android:textSize="24sp"
+                    android:gravity="bottom"
+                    android:layout_gravity="bottom"
+                    android:textAlignment="gravity" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:text="@string/title"
+                    android:textColor="@android:color/white"
+                    android:ems="10"
+                    android:textSize="36sp"
+                    android:layout_gravity="top"
+                    android:gravity="top" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="@string/slogan"
+            android:ems="10"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:textSize="24sp" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:layout_marginTop="30dp">
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:text="@string/square"
+                android:textColor="@android:color/white"
+                android:ems="10" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:text="@string/description1"
+                android:textColor="@android:color/white"
+                android:ems="10"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:text="@string/square"
+                android:textColor="@android:color/white"
+                android:ems="10" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:text="@string/description2"
+                android:textColor="@android:color/white"
+                android:ems="10"
+                android:textSize="18sp"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <Button
         android:layout_width="match_parent"
@@ -21,5 +133,6 @@
         android:id="@+id/button"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
 </RelativeLayout>
