DEV-1110: pre-load webview with viewpager mode

--- a/app/src/main/res/layout/fragment_recommended_apps.xml
+++ b/app/src/main/res/layout/fragment_recommended_apps.xml
@@ -22,5 +22,5 @@
         android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:textColor="@android:color/white"
         android:background="@color/fashion_yellow"
-        android:enabled="false"/>
+        android:enabled="true"/>
 </LinearLayout>
