--- a/app/src/main/res/layout/fragment_fashion.xml
+++ b/app/src/main/res/layout/fragment_fashion.xml
@@ -1,127 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@android:color/white"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_above="@+id/button"
+    <ImageView
+        android:paddingTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_centralize">
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:paddingLeft="20dp">
-
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/icon_fashion"
-                android:layout_weight="1" />
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingTop="50dp"
-                android:paddingBottom="35dp"
-                android:paddingLeft="10dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:text="@string/welcome"
-                    android:textColor="@android:color/white"
-                    android:ems="10"
-                    android:textSize="24sp"
-                    android:gravity="bottom"
-                    android:layout_gravity="bottom"
-                    android:textAlignment="gravity" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:text="@string/title"
-                    android:textColor="@android:color/white"
-                    android:ems="10"
-                    android:textSize="36sp"
-                    android:layout_gravity="top"
-                    android:gravity="top" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="@string/slogan"
-            android:ems="10"
-            android:textColor="@android:color/white"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
-            android:textSize="28sp" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:layout_marginTop="30dp">
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="@string/square"
-                android:textColor="@android:color/white"
-                android:ems="10" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:text="@string/description1"
-                android:textColor="@android:color/white"
-                android:ems="10"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="@string/square"
-                android:textColor="@android:color/white"
-                android:ems="10" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:text="@string/description2"
-                android:textColor="@android:color/white"
-                android:ems="10"
-                android:textSize="18sp"/>
-        </LinearLayout>
-    </LinearLayout>
+        app:srcCompat="@drawable/splash_screen"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false" />
 
     <Button
         android:layout_width="match_parent"
@@ -131,8 +23,8 @@
         android:textColor="@android:color/white"
         android:background="@color/fashion_yellow"
         android:id="@+id/button"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_gravity="center|bottom"
         android:textSize="18sp" />
-</RelativeLayout>
+
+
+</FrameLayout>
