--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="xiaomi_button_background_blue">#0098e6</color>
     <color name="xiaomi_button_background_selected_blue">#0080c1</color>
 
-    <color name="fashion_yellow">#b5973b</color>
-    <color name="fashion_grey">#4d4d4d</color>
+    <color name="fashion_yellow">#0098e6</color>
+    <color name="fashion_grey">#8499af</color>
 </resources>
