--- a/app/src/main/res/layout/toolbar_bootstrap.xml
+++ b/app/src/main/res/layout/toolbar_bootstrap.xml
@@ -12,7 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            android:id="@+id/toolbar_layout">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
