--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">@color/fashion_grey</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="loadingBackground">#D5D5D5</color>
 
     <color name="xiaomi_button_background_blue">#0098e6</color>
     <color name="xiaomi_button_background_selected_blue">#0080c1</color>
